# deepfake-social-media-detector

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DATASET_STRATEGY.md  DEVELOPMENT_RULES.md  EXPERIMENT_LOG.md  IMPLEMENTATION_ROADMAP.md  LICENSE  MODEL_SELECTION.md  PROJECT_CONTEXT.md  PROJECT_DOCUMENT.md  README.md  REQUIREMENTS.md  RESEARCH_GUIDELINES.md  TODO.md  app.py  manual.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
configs/: dataset.yaml  efficientnet.yaml  inference.yaml  training.yaml  xception.yaml
datasets/metadata/: labels.csv  manipulation_methods.csv  splits.csv  test.csv  train.csv  val.csv  video_info.csv
deployment/: Dockerfile  docker-compose.yml  nginx.conf
deployment/cloud/: aws.md  gcp.md
docs/: api.md  assumptions.md  limitations.md  objectives.md  problem_statement.md  scope.md  supervisor_review_checklist.md
docs/architecture/: deployment_pipeline.md  inference_pipeline.md  model_pipeline.md  system_architecture.html  system_architecture.md  system_design.md  training_pipeline.md
docs/diagrams/: efficientnet_architecture.drawio  evaluation_pipeline.drawio  inference_pipeline.drawio  preprocessing_pipeline.drawio  sequence_diagram.drawio  system_architecture.drawio  use_case.drawio  (+5 more)
notebooks/: 01_dataset_exploration.ipynb  02_preprocessing.ipynb  03_face_detection.ipynb  04_training_xception.ipynb  05_training_efficientnet.ipynb  06_evaluation.ipynb  07_inference_demo.ipynb  07_visualization.ipynb  colab_training.ipynb  download_datasets_colab.ipynb  experiment_pipeline.ipynb  training_only.ipynb
scripts/: cleanup_repository.py  deploy.sh  download_datasets.sh  evaluate.sh  export_metrics.py  generate_test_data.py  generate_thesis_assets.py  preprocess.sh  run_experiments.py  setup.sh  train.sh
src/: __init__.py
tests/: conftest.py  test_api.py  test_augmentation.py  test_dataset.py  test_inference.py  test_models.py  test_preprocessing.py  test_training.py
thesis/: chapter_4.md  chapter_5.md  chapters_1_2_3.md  contribution_statement.md  convert_to_docx.py  references.bib  thesis.docx  thesis.md
(+63 files in other folders)
